--- a/app/assets/templates/mainIndex.html
+++ b/app/assets/templates/mainIndex.html
@@ -1,6 +1,6 @@
-<h1>Songr</h1>
-<div class='row' ng-repeat='song in data.songs'>
-  <h3><a ng-click='viewSong($index)'>{{song.title}}</a></h3>
+<h1>Songr</h1><input type='text' ng-model='search'>
+<div class='row' ng-repeat='song in data.songs | filter: search'>
+  <h3><a href ng-click='viewSong($index)'>{{song.title}}</a></h3>
   <h5>- {{song.artist}}</h5>
 </div>
 
