--- a/app/assets/templates/mainSong.html
+++ b/app/assets/templates/mainSong.html
@@ -5,7 +5,7 @@
     <li>Buy: {{songService.songs[songID].price | currency}}</li>
   </ul>
 
-  <a ng-click='$back()'>Back</a>
+  <a href ng-click='$back()'>Back</a>
 
 
 
